Updated trigger for pipeline.

--- a/pipeline-deploying-bicep.yml
+++ b/pipeline-deploying-bicep.yml
@@ -1,4 +1,10 @@
-trigger: none
+trigger: 
+  branches:
+    include: 
+    - master
+  paths:
+    include:
+    - main.bicep
 
 pool:
   vmImage: 'ubuntu-latest' # 'windows-latest'
