--- a/pipeline-deploying-bicep.yml
+++ b/pipeline-deploying-bicep.yml
@@ -1,10 +1,4 @@
-trigger: 
-  branches:
-    include: 
-    - master
-  paths:
-    include:
-    - main.bicep
+trigger: none
 
 pool:
   vmImage: 'ubuntu-latest' # 'windows-latest'
