Corrected pipeline deploying bicep.

--- a/pipeline-deploying-bicep.yml
+++ b/pipeline-deploying-bicep.yml
@@ -12,5 +12,5 @@ jobs:
         location: 'polandcentral'
         resourceGroupName: $(ResourceGroupName)
         csmFile: ./main.bicep
-        overrideParameters: >
-          -parameterName parameterValue
+        # overrideParameters: >
+        #   -parameterName parameterValue
