Correcting basic version of multi stage pipeline

--- a/validate-bicep-multi-stage.yml
+++ b/validate-bicep-multi-stage.yml
@@ -47,13 +47,13 @@ stages:
         runOnce:
           deploy:
             steps:
-            - checkout: self
+#            - checkout: self
             - task: AzureResourceManagerTemplateDeployment@3
               name: Deploy
               displayName: Deploy to Azure
               inputs:
                 connectedServiceName: $(ServiceConnectionName)
-                location: $(deploymentDefaultLocation)
+                location: 'polandcentral'
                 resourceGroupName: $(ResourceGroupName)
                 csmFile: ./main.bicep
                 deploymentOutputs: deploymentOutputs
