--- a/validate-bicep-multi-stage.yml
+++ b/validate-bicep-multi-stage.yml
@@ -41,7 +41,7 @@ stages:
 # website.
 - stage: Deploy
   jobs:
-    - deployment: Deploy
+    - deployment: DeployWebsite
       environment: Prod
       strategy:
         runOnce:
@@ -56,8 +56,9 @@ stages:
                 location: 'polandcentral'
                 resourceGroupName: $(ResourceGroupName)
                 csmFile: ./main.bicep
+                deploymentOutputs: deploymentOutputs
             - bash: |
-                echo "##vso[task.setvariable variable=appServiceAppHostName;isOutput=true]$(echo $DEPLOYMENT_OUTPUTS | jq -r '.appServiceAppHostName.value')"
+                echo "##vso[task.setvariable variable=appServiceAppHostName;isoutput=true]$(echo $DEPLOYMENT_OUTPUTS | jq -r '.appServiceAppHostName.value')"
               name: SaveDeploymentOutputs
               displayName: Save deployment outputs into variables
               env:
