Corrected pipeline errors

--- a/build-application-and-deploy-pipeline/build-dotnet-solution-template.yml
+++ b/build-application-and-deploy-pipeline/build-dotnet-solution-template.yml
@@ -7,7 +7,7 @@ jobs:
   steps:
     # Build, copy and publish the website.
     - task: DotNetCoreCLI@2
-      displaName: Build publishable website
+      displayName: Build publishable website
       inputs:
         command: 'publish'
         publishWebProjects: true
