--- a/build-application-and-deploy-pipeline/deploy-to-environment-template.yml
+++ b/build-application-and-deploy-pipeline/deploy-to-environment-template.yml
@@ -31,10 +31,18 @@ stages:
                 deploymentName: $(Build.BuildNumber)
                 location: 'centralpoland'
                 resourceGroupName: ${{parameters.ResourceGroupName}}
-                csmFile: ./website.bicep
+                csmFile: build-application-and-deploy-pipeline/website.bicep
                 overrideParameters: >
-                  -environmentType $(EnvironmentType)
+                  -environmentType ${{parameters.environmentType}}
                 deploymentOutputs: deploymentOutputs
+
+            - bash: |
+                echo "##vso[task.setvariable variable=appServiceAppHostName;isoutput=true]$(echo $DEPLOYMENT_OUTPUTS | jq -r '.appServiceAppHostName.value')"
+                echo "##vso[task.setvariable variable=appServiceAppName;isoutput=true]$(echo $DEPLOYMENT_OUTPUTS | jq -r '.appServiceAppName.value')"
+              name: SaveDeploymentOutputs
+              displayName: Save deployment outputs into variables
+              env:
+                DEPLOYMENT_OUTPUTS: $(deploymentOutputs)
 
             - task: AzureRmWebAppDeployment@4
               name: DeployWebsiteApp
@@ -44,7 +52,30 @@ stages:
                 ConnectionType: AzureRM
                 azureSubscription: ${{parameters.connectedServiceName}}
                 ResourceGroupName: ${{parameters.ResourceGroupName}}
-                WebAppName: $(appServiceAppName)
+                WebAppName: $(SaveDeploymentOutputs.appServiceAppName)
                 Package: '$(Pipeline.Workspace)/website/publish.zip'
-
-# Smoke test
+    
+  - job: SmokeTest
+    displayName: Smoke test with Smoke Testing from powershell script with Pester (unit testing framework for powershell)
+    variables:
+      appServiceAppHostName: $[ dependencies.DeployWebsite.outputs['DeployWebsite.SaveDeploymentOutputs.appServiceAppHostName'] ]
+    steps:
+      - task: PowerShell@2
+        name: RunSmokeTests
+        displayName: Run smoke tests
+        inputs:
+          targetType: inline
+          script: |
+            $container = New-PesterContainer `
+              -Path 'build-application-and-deploy-pipeline/Website.SmokeTest.ps1' `
+              -Data @{ HostName = '$(appServiceAppHostName)' }
+            Invoke-Pester `
+              -Container $container `
+              -CI
+      - task: PublishTestResults@2
+        name: PublishTestResults
+        displayName: Publish test results
+        condition: always()
+        inputs:
+          testResultsFormat: NUnit
+          testResultsFiles: 'testResults.xml'
