--- a/build-application-and-deploy-pipeline/deploy-to-environment-template.yml
+++ b/build-application-and-deploy-pipeline/deploy-to-environment-template.yml
@@ -56,6 +56,7 @@ stages:
                 Package: '$(Pipeline.Workspace)/website/publish.zip'
     
   - job: SmokeTest
+    dependsOn: DeployWebsite
     displayName: Smoke test with Smoke Testing from powershell script with Pester (unit testing framework for powershell)
     variables:
       appServiceAppHostName: $[ dependencies.DeployWebsite.outputs['DeployWebsite.SaveDeploymentOutputs.appServiceAppHostName'] ]
